Updated 12 files via CloudCannon

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 <meta content="@MplsFarmMarket" name="twitter:site">
 <meta content="https://www.facebook.com/MplsFarmersMarket/" property="article:publisher">
 <script type="application/ld+json">
-{"@type":"WebSite","image":"https://www.mplsfarmersmarket.com/assets/img/mplsfarmersmarket-social.png","publisher":{"@type":"Organization","logo":{"@type":"ImageObject","url":"https://www.mplsfarmersmarket.com/assets/img/Minneapolis-Farmers-Market-Logo.svg"}},"name":"Minneapolis Farmers Market","url":"https://www.mplsfarmersmarket.com/","headline":"Home","sameAs":["https://twitter.com/MplsFarmMarket","https://www.facebook.com/MplsFarmersMarket","https://www.instagram.com/mplsfarmmarket"],"@context":"https://schema.org"}</script>
+{"headline":"Home","sameAs":["https://twitter.com/MplsFarmMarket","https://www.facebook.com/MplsFarmersMarket","https://www.instagram.com/mplsfarmmarket"],"@type":"WebSite","image":"https://www.mplsfarmersmarket.com/assets/img/mplsfarmersmarket-social.png","name":"Minneapolis Farmers Market","publisher":{"@type":"Organization","logo":{"@type":"ImageObject","url":"https://www.mplsfarmersmarket.com/assets/img/Minneapolis-Farmers-Market-Logo.svg"}},"url":"https://www.mplsfarmersmarket.com/","@context":"https://schema.org"}</script>
 <!-- End Jekyll SEO tag -->
 
     <script type="application/ld+json">
@@ -225,16 +225,13 @@
     <div class="col-12 col-lg-6 home-market-info left-column editable" data-cms-index="0" data-cms-source="/_includes/home-market-info.html" id="home-market-one">
       <h5>Minneapolis Farmers Market</h5>
       <p>We're sorry, no dogs are allowed!</p>
-      <p>EBT is closed for the winter.</p>
-      <p><strong>OPEN IN THE WINTER</strong></p>
-      <p><em>Select Dates - 9 am to Noon</em></p>
-      <p>November 5th &amp; 6th</p>
-      <p>November 12th &amp; 13th</p>
-      <p><strong>Christmas Tree Vendors</strong><strong><em>&nbsp;</em></strong></p>
-      <p><em>Open Daily 1 Week Before Thanksgiving&nbsp;</em></p>
-      <p><em>Nov. 17th Thru X-mas</em></p>
-      <p>November 19th &amp; 20th</p>
-      <p>November 26th &amp; 27th</p>
+      <p>EBT is closed for the winter.&nbsp;</p>
+      <p>----------------------------</p>
+      <p><strong>Christmas Tree Vendors<i>&nbsp;</i></strong></p>
+      <p><strong>Hours: <strong>DAILY&nbsp;</strong>8 am to 8 pm&nbsp;</strong></p>
+      <p>---------------------------</p>
+      <p><strong>Winter Farmers Market</strong></p>
+      <p><em>Open On Select Dates - 9 am to Noon</em></p>
       <p>December 3rd</p>
       <p>December 10th</p>
       <p>December 17th</p>
