--- a/lyndale-market.html
+++ b/lyndale-market.html
@@ -191,10 +191,10 @@
         MPLS Farmers Market
       </h2>
       <h5 class="editable" data-cms-index="1" data-cms-source="/lyndale-market.html">
-        <b>OPEN DAILY 6AM TO 1PM RAIN OR SHINE</b>
+        
       </h5>
       <p class="market-page-hours editable" data-cms-index="2" data-cms-source="/lyndale-market.html">
-        SNAP/EBT Hours: 8am to 1pm Thursday - Sunday<br>*Vendor availability varies
+        EBT is closed for the winter.&nbsp;<br>----------------------------<br><strong>Christmas Tree Vendors<em>&nbsp;</em></strong><br><strong>Hours: <strong>DAILY&nbsp;</strong>8 am to 8 pm&nbsp;</strong><br>---------------------------<br><strong>Winter Farmers Market</strong><br><em>Open On Select Dates - 9 am to Noon</em><br>December 3rd<br>December 10th<br>December 17th<br>January 7th<br>January 21st<br>February 4th<br>February 18th<br>March 4th<br>March 18th
       </p>
       <p class="market-page-address editable" data-cms-index="3" data-cms-source="/lyndale-market.html">
         312 East Lyndale Ave North,<br>Minneapolis, Minnesota 55405
