Updated 11 files via CloudCannon

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 <meta content="@MplsFarmMarket" name="twitter:site">
 <meta content="https://www.facebook.com/MplsFarmersMarket/" property="article:publisher">
 <script type="application/ld+json">
-{"headline":"Home","sameAs":["https://twitter.com/MplsFarmMarket","https://www.facebook.com/MplsFarmersMarket","https://www.instagram.com/mplsfarmmarket"],"@type":"WebSite","image":"https://www.mplsfarmersmarket.com/assets/img/mplsfarmersmarket-social.png","name":"Minneapolis Farmers Market","publisher":{"@type":"Organization","logo":{"@type":"ImageObject","url":"https://www.mplsfarmersmarket.com/assets/img/Minneapolis-Farmers-Market-Logo.svg"}},"url":"https://www.mplsfarmersmarket.com/","@context":"https://schema.org"}</script>
+{"@type":"WebSite","image":"https://www.mplsfarmersmarket.com/assets/img/mplsfarmersmarket-social.png","headline":"Home","name":"Minneapolis Farmers Market","sameAs":["https://twitter.com/MplsFarmMarket","https://www.facebook.com/MplsFarmersMarket","https://www.instagram.com/mplsfarmmarket"],"publisher":{"@type":"Organization","logo":{"@type":"ImageObject","url":"https://www.mplsfarmersmarket.com/assets/img/Minneapolis-Farmers-Market-Logo.svg"}},"url":"https://www.mplsfarmersmarket.com/","@context":"https://schema.org"}</script>
 <!-- End Jekyll SEO tag -->
 
     <script type="application/ld+json">
@@ -253,7 +253,23 @@
   </div>
 </div>
 
-  
+  <div class="meet-vendors-section">
+  <div class="col-12 col-lg-6 meet-vend">
+    <h3 class="editable" data-cms-index="0" data-cms-source="/_includes/home-vendors.html">
+      Meet the worker bees who make our markets flourish
+    </h3>
+    <p class="editable" data-cms-index="1" data-cms-source="/_includes/home-vendors.html">
+      Our markets empower visitors to develop a personal connection to the food they eat by learning where it comes from, how it was treated and how to prepare it—directly from the grower.
+    </p>
+    <a class="btn btn-lg theme-button" href="/vendors" role="button">Check out our vendors</a>
+  </div>
+  <div class="col-12 col-lg-6 meet-vend-img">
+    <div class="home-vend-img-wrap">
+      <img alt="Vendors" class="img-fluid" data-cms-original-src="assets/img/meet-our-vendors-image.png" src="/assets/img/meet-our-vendors-image.png?_cchid=5b63baee60b6f66ebe35e7fa2957f4f8">
+    </div>
+  </div>
+</div>
+
   <div class="rich-history-section">
   <div class="col-12 col-lg-6 rich-hist-img">
     <img alt="History" class="img-fluid" data-cms-original-src="assets/img/storied-history-image.png" src="/assets/img/storied-history-image.png?_cchid=66be64f3969cad6bacd5fcd0dd01951c">
