Updated 12 files via CloudCannon

--- a/lyndale-market.html
+++ b/lyndale-market.html
@@ -194,7 +194,7 @@
         
       </h5>
       <p class="market-page-hours editable" data-cms-index="2" data-cms-source="/lyndale-market.html">
-        EBT is closed for the winter.&nbsp;<br>----------------------------<br><strong>Christmas Tree Vendors<em>&nbsp;</em></strong><br><strong>Hours: <strong>DAILY&nbsp;</strong>8 am to 8 pm&nbsp;</strong><br>---------------------------<br><strong>Winter Farmers Market</strong><br><em>Open On Select Dates - 9 am to Noon</em><br>December 3rd<br>December 10th<br>December 17th<br>January 7th<br>January 21st<br>February 4th<br>February 18th<br>March 4th<br>March 18th
+        EBT is closed for the winter.&nbsp;<br>----------------------------<br><strong>Christmas Tree Vendors<em>&nbsp;</em></strong><br><strong>Hours: <strong>DAILY&nbsp;</strong>8 am to 8 pm&nbsp;</strong><br>---------------------------<br><strong>Winter Farmers Market</strong><br><em>Open On Select Dates - 9 am to Noon</em><br>January 7th<br>January 21st<br>February 4th<br>March 4th<br>March 18th
       </p>
       <p class="market-page-address editable" data-cms-index="3" data-cms-source="/lyndale-market.html">
         312 East Lyndale Ave North,<br>Minneapolis, Minnesota 55405
@@ -444,7 +444,7 @@
     </div>
     <div class="other-footer-links row mx-0">
       <div class="col-12">
-        <p>© 2022 Minneapolis Farmers Market</p>
+        <p>© 2023 Minneapolis Farmers Market</p>
       </div>
     </div>
     <div class="made-in-mn">
