Updated 12 files via CloudCannon

--- a/about.html
+++ b/about.html
@@ -30,7 +30,7 @@
 <meta content="@MplsFarmMarket" name="twitter:site">
 <meta content="https://www.facebook.com/MplsFarmersMarket/" property="article:publisher">
 <script type="application/ld+json">
-{"@type":"WebPage","image":"https://www.mplsfarmersmarket.com/assets/img/mplsfarmersmarket-social.png","headline":"About","publisher":{"@type":"Organization","logo":{"@type":"ImageObject","url":"https://www.mplsfarmersmarket.com/assets/img/Minneapolis-Farmers-Market-Logo.svg"}},"url":"https://www.mplsfarmersmarket.com/about.html","@context":"https://schema.org"}</script>
+{"publisher":{"@type":"Organization","logo":{"@type":"ImageObject","url":"https://www.mplsfarmersmarket.com/assets/img/Minneapolis-Farmers-Market-Logo.svg"}},"@type":"WebPage","image":"https://www.mplsfarmersmarket.com/assets/img/mplsfarmersmarket-social.png","headline":"About","url":"https://www.mplsfarmersmarket.com/about.html","@context":"https://schema.org"}</script>
 <!-- End Jekyll SEO tag -->
 
     <script type="application/ld+json">
@@ -196,10 +196,10 @@
           We're on a mission to bring goodness to our community
         </h2>
         <p class="editable" data-cms-index="3" data-cms-source="/_includes/about-hero.html">
-          The Minneapolis and Nicollet Mall Farmers Markets connect local farmers and gardeners with Twin Cities residents to build a sense of community over a shared love of food.
+          The Minneapolis Farmers Market connects local farmers and gardeners with Twin Cities residents to build a sense of community over a shared love of food.
         </p>
         <p class="editable" data-cms-index="4" data-cms-source="/_includes/about-hero.html">
-          Our markets empower visitors to develop a personal connection to the food they eat by learning where it comes from, how it was treated, and how to prepare it-<br>directly from the grower.
+          Our market empowers visitors to develop a personal connection to the food they eat by learning where it comes from, how it was treated, and how to prepare it-<br>directly from the grower.
         </p>
       </div>
     </div>
@@ -221,7 +221,7 @@
   </div>
   <div class="col-12 col-lg-4 about-md-txt-col">
     <p class="about-middle-text editable" data-cms-index="1" data-cms-source="/_includes/about-middle.html">
-      As the largest farmer-managed markets in the state, we serve as a community resource, meeting place, a tourist draw and, most importantly, a place to access Minnesota’s greatest selection of fresh produce, plants, and locally made products.
+      As the largest farmer-managed market in the state, we serve as a community resource, a meeting place, a tourist draw, and most importantly, a place to access Minnesota’s greatest selection of fresh produce, plants, and locally made products.
     </p>
     <p class="about-middle-text editable" data-cms-index="2" data-cms-source="/_includes/about-middle.html">
       Our roots in Minneapolis started in 1876 at the corner of First Street and Hennepin Avenue. In 1937, our current flagship market opened at Lyndale and Glenwood Avenue north, marked by the three signature red sheds that still cover our market.
