Updated 12 files via CloudCannon

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 <meta content="@MplsFarmMarket" name="twitter:site">
 <meta content="https://www.facebook.com/MplsFarmersMarket/" property="article:publisher">
 <script type="application/ld+json">
-{"publisher":{"@type":"Organization","logo":{"@type":"ImageObject","url":"https://www.mplsfarmersmarket.com/assets/img/Minneapolis-Farmers-Market-Logo.svg"}},"@type":"WebSite","image":"https://www.mplsfarmersmarket.com/assets/img/mplsfarmersmarket-social.png","name":"Minneapolis Farmers Market","headline":"Home","sameAs":["https://twitter.com/MplsFarmMarket","https://www.facebook.com/MplsFarmersMarket","https://www.instagram.com/mplsfarmmarket"],"url":"https://www.mplsfarmersmarket.com/","@context":"https://schema.org"}</script>
+{"image":"https://www.mplsfarmersmarket.com/assets/img/mplsfarmersmarket-social.png","headline":"Home","sameAs":["https://twitter.com/MplsFarmMarket","https://www.facebook.com/MplsFarmersMarket","https://www.instagram.com/mplsfarmmarket"],"publisher":{"@type":"Organization","logo":{"@type":"ImageObject","url":"https://www.mplsfarmersmarket.com/assets/img/Minneapolis-Farmers-Market-Logo.svg"}},"@type":"WebSite","name":"Minneapolis Farmers Market","url":"https://www.mplsfarmersmarket.com/","@context":"https://schema.org"}</script>
 <!-- End Jekyll SEO tag -->
 
     <script type="application/ld+json">
@@ -229,12 +229,9 @@
       <p>----------------------------</p>
       <p><strong>Winter Farmers Market</strong></p>
       <p><em>Open On Select Dates - 9 am to Noon</em></p>
-      <p>January 7th</p>
-      <p>January 21st</p>
-      <p>February 4th</p>
-      <p>February 18th</p>
-      <p>March 4th</p>
-      <p>March 18th</p>
+      <p>April 1st</p>
+      <p>April 15th</p>
+      <p>April 22nd and 23rd</p>
       <p class="market-address">312 East Lyndale Ave North,<br>Minneapolis, Minnesota 55405</p>
       <p><a class="btn btn-lg theme-button" href="/lyndale-market" role="button">Learn More</a></p>
     </div>
