--- a/success.html
+++ b/success.html
@@ -30,7 +30,7 @@
 <meta content="@MplsFarmMarket" name="twitter:site">
 <meta content="https://www.facebook.com/MplsFarmersMarket/" property="article:publisher">
 <script type="application/ld+json">
-{"publisher":{"@type":"Organization","logo":{"@type":"ImageObject","url":"https://www.mplsfarmersmarket.com/assets/img/Minneapolis-Farmers-Market-Logo.svg"}},"@type":"WebPage","image":"https://www.mplsfarmersmarket.com/assets/img/mplsfarmersmarket-social.png","headline":"Success","url":"https://www.mplsfarmersmarket.com/success.html","@context":"https://schema.org"}</script>
+{"image":"https://www.mplsfarmersmarket.com/assets/img/mplsfarmersmarket-social.png","headline":"Success","publisher":{"@type":"Organization","logo":{"@type":"ImageObject","url":"https://www.mplsfarmersmarket.com/assets/img/Minneapolis-Farmers-Market-Logo.svg"}},"@type":"WebPage","url":"https://www.mplsfarmersmarket.com/success.html","@context":"https://schema.org"}</script>
 <!-- End Jekyll SEO tag -->
 
     <script type="application/ld+json">
