Updated 2 files via CloudCannon

--- a/lyndale-market.html
+++ b/lyndale-market.html
@@ -194,7 +194,7 @@
         
       </h5>
       <p class="market-page-hours editable" data-cms-index="2" data-cms-source="/lyndale-market.html">
-        <strong>EBT is closed for the winter.&nbsp;</strong><br>---------------------------<br><strong>Winter Farmers Market</strong><br><em>Open On Select Dates - 9 am to Noon</em><br>January 7th<br>January 21st<br>February 4th<br>February 18th<br>March 4th<br>March 18th
+        <strong>EBT is closed for the winter.&nbsp;</strong><br>---------------------------<br><strong>Winter Farmers Market</strong><br><em>Open On Select Dates - 9 am to Noon</em><br>April 1st<br>April 15th<br>April 22nd and 23rd
       </p>
       <p class="market-page-address editable" data-cms-index="3" data-cms-source="/lyndale-market.html">
         312 East Lyndale Ave North,<br>Minneapolis, Minnesota 55405
