--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 <meta content="@MplsFarmMarket" name="twitter:site">
 <meta content="https://www.facebook.com/MplsFarmersMarket/" property="article:publisher">
 <script type="application/ld+json">
-{"image":"https://www.mplsfarmersmarket.com/assets/img/mplsfarmersmarket-social.png","headline":"Home","sameAs":["https://twitter.com/MplsFarmMarket","https://www.facebook.com/MplsFarmersMarket","https://www.instagram.com/mplsfarmmarket"],"publisher":{"@type":"Organization","logo":{"@type":"ImageObject","url":"https://www.mplsfarmersmarket.com/assets/img/Minneapolis-Farmers-Market-Logo.svg"}},"@type":"WebSite","name":"Minneapolis Farmers Market","url":"https://www.mplsfarmersmarket.com/","@context":"https://schema.org"}</script>
+{"publisher":{"@type":"Organization","logo":{"@type":"ImageObject","url":"https://www.mplsfarmersmarket.com/assets/img/Minneapolis-Farmers-Market-Logo.svg"}},"headline":"Home","sameAs":["https://twitter.com/MplsFarmMarket","https://www.facebook.com/MplsFarmersMarket","https://www.instagram.com/mplsfarmmarket"],"@type":"WebSite","name":"Minneapolis Farmers Market","url":"https://www.mplsfarmersmarket.com/","image":"https://www.mplsfarmersmarket.com/assets/img/mplsfarmersmarket-social.png","@context":"https://schema.org"}</script>
 <!-- End Jekyll SEO tag -->
 
     <script type="application/ld+json">
@@ -396,7 +396,6 @@
     <div class="menu-wrapper">
       <ul id="footer-menu">
         <li><a href="/lyndale-market">MPLS Farmers Market</a></li>
-        <li><a href="/nicollet-market">Nicollet Mall Market</a></li>
         <li><a href="/vendors">Meet Our Vendors</a></li>
         <li><a href="/about">About</a></li>
         <li><a href="/contact">Contact</a></li>
