--- a/market-rules.html
+++ b/market-rules.html
@@ -30,7 +30,7 @@
 <meta content="@MplsFarmMarket" name="twitter:site">
 <meta content="https://www.facebook.com/MplsFarmersMarket/" property="article:publisher">
 <script type="application/ld+json">
-{"image":"https://www.mplsfarmersmarket.com/assets/img/mplsfarmersmarket-social.png","headline":"Market Rules","publisher":{"@type":"Organization","logo":{"@type":"ImageObject","url":"https://www.mplsfarmersmarket.com/assets/img/Minneapolis-Farmers-Market-Logo.svg"}},"@type":"WebPage","url":"https://www.mplsfarmersmarket.com/market-rules.html","@context":"https://schema.org"}</script>
+{"publisher":{"@type":"Organization","logo":{"@type":"ImageObject","url":"https://www.mplsfarmersmarket.com/assets/img/Minneapolis-Farmers-Market-Logo.svg"}},"headline":"Market Rules","@type":"WebPage","url":"https://www.mplsfarmersmarket.com/market-rules.html","image":"https://www.mplsfarmersmarket.com/assets/img/mplsfarmersmarket-social.png","@context":"https://schema.org"}</script>
 <!-- End Jekyll SEO tag -->
 
     <script type="application/ld+json">
@@ -253,7 +253,6 @@
     <div class="menu-wrapper">
       <ul id="footer-menu">
         <li><a href="/lyndale-market">MPLS Farmers Market</a></li>
-        <li><a href="/nicollet-market">Nicollet Mall Market</a></li>
         <li><a href="/vendors">Meet Our Vendors</a></li>
         <li><a href="/about">About</a></li>
         <li><a href="/contact">Contact</a></li>
