Updated 2 files via CloudCannon

--- a/index.html
+++ b/index.html
@@ -217,11 +217,11 @@
 
   <div class="home-market-info-section">
   <div class="home-market-info-header">
-    <h4>Two markets with one goal.</h4>
-    <p>We're on a mission to bring goodness to our community <span class="embolden">all year round</span>!</p>
+    <h4>We're on a mission</h4>
+    <p>To bring goodness to our community <span class="embolden">all year round</span>!</p>
   </div>
   <div class="market-info-wrapper">
-    <div class="col-12 col-lg-6 home-market-info left-column editable" data-cms-index="0" data-cms-source="/_includes/home-market-info.html" id="home-market-one">
+    <div class="col-12 col-lg-12 home-market-info left-column editable" data-cms-index="0" data-cms-source="/_includes/home-market-info.html" id="home-market-one">
       <h5>Minneapolis Farmers Market</h5>
       <p>We're sorry, no dogs are allowed!</p>
       <p>EBT is closed for the winter.&nbsp;</p>
@@ -233,12 +233,6 @@
       <p>April 22nd and 23rd</p>
       <p class="market-address">312 East Lyndale Ave North,<br>Minneapolis, Minnesota 55405</p>
       <p><a class="btn btn-lg theme-button" href="/lyndale-market" role="button">Learn More</a></p>
-    </div>
-    <div class="col-12 col-lg-6 home-market-info home-market-2 editable" data-cms-index="1" data-cms-source="/_includes/home-market-info.html">
-      <h5>Nicollet Mall Market</h5>
-      <p><b>Closed for the Season</b></p>
-      <p class="market-address">Nicollet Mall, in Downtown Minneapolis<br>between 6th and 9th streets</p>
-      <p><a class="btn btn-lg theme-button" href="/nicollet-market" role="button">Learn More</a></p>
     </div>
   </div>
 </div>
