Updated 2 files via CloudCannon

--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
     <p>To bring goodness to our community <span class="embolden">all year round</span>!</p>
   </div>
   <div class="market-info-wrapper">
-    <div class="col-12 col-lg-12 home-market-info left-column editable" data-cms-index="0" data-cms-source="/_includes/home-market-info.html" id="home-market-one">
+    <div class="col-12 col-lg-12 home-market-info editable" data-cms-index="0" data-cms-source="/_includes/home-market-info.html" id="home-market-one">
       <h5>Minneapolis Farmers Market</h5>
       <p>We're sorry, no dogs are allowed!</p>
       <p>EBT is closed for the winter.&nbsp;</p>
