--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
   </div>
 
   <div class="topnav" id="myTopNav">
-    <a class="topnav-trigger" href="#">Markets <i class="arrow down"></i></a>
+    <a class="topnav-trigger" href="#">Market Info <i class="arrow down"></i></a>
     <a href="/vendors">Vendors</a>
     <a href="/about">About</a>
     <a href="/contact">Contact</a>
