--- a/about.html
+++ b/about.html
@@ -47,7 +47,7 @@
     "name": "Minneapolis Farmers Market",
     "alternateName": "Lyndale Market",
     "url": "https://mplsfarmersmarket-staging.wvinfra.com/",
-    "priceRange": "$",
+    "priceRange": "$",n
     "telephone": "+16123331718",
     "email": "maolee@mplsfarmersmarket.com",
     "address": {
@@ -77,42 +77,6 @@
         ],
         "opens": "06:00",
         "closes": "13:00"
-      }
-    ],
-    "department": [
-      {
-        "@type": "GroceryStore",
-        "image": [
-          "https://mplsfarmersmarket-staging.wvinfra.com/assets/img/NicolletMarketImage4.png"
-        ],
-        "name": "Nicollet Mall Market",
-        "alternateName": "Downtown Farmers' Market",
-        "url": "https://mplsfarmersmarket-staging.wvinfra.com/nicollet-market",
-        "priceRange": "$",
-        "telephone": "+16123331718",
-        "address": {
-          "@type": "PostalAddress",
-          "streetAddress": "300 South 6th St",
-          "addressLocality": "Minneapolis",
-          "addressRegion": "MN",
-          "postalCode": "55487",
-          "addressCountry": "US"
-        },
-        "geo": {
-          "@type": "GeoCoordinates",
-          "latitude": 44.976200,
-          "longitude": -93.267288
-        },
-        "openingHoursSpecification": [
-          {
-            "@type": "OpeningHoursSpecification",
-            "dayOfWeek": [
-              "Thursday"
-            ],
-            "opens": "06:00",
-            "closes": "13:00"
-          }
-        ]
       }
     ]
   }
