Updated 2 files via CloudCannon

--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@
       A rich foundation continues to fuel prosperity
     </h3>
     <p class="editable" data-cms-index="1" data-cms-source="/_includes/home-history.html">
-      Our roots in Minneapolis started in 1876 at the corner of First Street and Hennepin Avenue. In 1937, our current flagship market opened at Lyndale and Glenwood Avenue North, marked by the three signature red sheds that still cover our market. Today, we support more than 100 vendors who alternate the use of our 170 stalls. The Nicollet Mall Farmers Market was opened for the first time since 2014 on the newly renovated stretch of Nicollet Mall in 2018.
+      Our roots in Minneapolis started in 1876 at the corner of First Street and Hennepin Avenue. In 1937, our current flagship market opened at Lyndale and Glenwood Avenue North, marked by the three signature red sheds that still cover our market. Today, we support more than 100 vendors who alternate the use of our 170 stalls.
     </p>
     <a class="btn btn-lg theme-button" href="/about" id="history-button" role="button">Learn more about the market</a>
   </div>
