--- a/ebt-guidelines.html
+++ b/ebt-guidelines.html
@@ -30,7 +30,7 @@
 <meta content="@MplsFarmMarket" name="twitter:site">
 <meta content="https://www.facebook.com/MplsFarmersMarket/" property="article:publisher">
 <script type="application/ld+json">
-{"publisher":{"@type":"Organization","logo":{"@type":"ImageObject","url":"https://www.mplsfarmersmarket.com/assets/img/Minneapolis-Farmers-Market-Logo.svg"}},"headline":"EBT Guidelines","@type":"WebPage","url":"https://www.mplsfarmersmarket.com/ebt-guidelines.html","image":"https://www.mplsfarmersmarket.com/assets/img/mplsfarmersmarket-social.png","@context":"https://schema.org"}</script>
+{"publisher":{"@type":"Organization","logo":{"@type":"ImageObject","url":"https://www.mplsfarmersmarket.com/assets/img/Minneapolis-Farmers-Market-Logo.svg"}},"image":"https://www.mplsfarmersmarket.com/assets/img/mplsfarmersmarket-social.png","headline":"EBT Guidelines","@type":"WebPage","url":"https://www.mplsfarmersmarket.com/ebt-guidelines.html","@context":"https://schema.org"}</script>
 <!-- End Jekyll SEO tag -->
 
     <script type="application/ld+json">
