--- a/lyndale-market.html
+++ b/lyndale-market.html
@@ -30,7 +30,7 @@
 <meta content="@MplsFarmMarket" name="twitter:site">
 <meta content="https://www.facebook.com/MplsFarmersMarket/" property="article:publisher">
 <script type="application/ld+json">
-{"publisher":{"@type":"Organization","logo":{"@type":"ImageObject","url":"https://www.mplsfarmersmarket.com/assets/img/Minneapolis-Farmers-Market-Logo.svg"}},"headline":"Lyndale Market","@type":"WebPage","url":"https://www.mplsfarmersmarket.com/lyndale-market.html","image":"https://www.mplsfarmersmarket.com/assets/img/mplsfarmersmarket-social.png","@context":"https://schema.org"}</script>
+{"publisher":{"@type":"Organization","logo":{"@type":"ImageObject","url":"https://www.mplsfarmersmarket.com/assets/img/Minneapolis-Farmers-Market-Logo.svg"}},"image":"https://www.mplsfarmersmarket.com/assets/img/mplsfarmersmarket-social.png","headline":"Lyndale Market","@type":"WebPage","url":"https://www.mplsfarmersmarket.com/lyndale-market.html","@context":"https://schema.org"}</script>
 <!-- End Jekyll SEO tag -->
 
     <script type="application/ld+json">
@@ -157,7 +157,7 @@
         
       </h5>
       <p class="market-page-hours editable" data-cms-index="2" data-cms-source="/lyndale-market.html">
-        <strong>EBT is closed for the winter.&nbsp;</strong><br>---------------------------<br><strong>Winter Farmers Market</strong><br><em>Open On Select Dates - 9 am to Noon</em><br>April 1st<br>April 15th<br>April 22nd and 23rd
+        <strong>EBT is closed for the winter.&nbsp;</strong><br>---------------------------<br><strong>Winter Farmers Market</strong><br><em>Open On Select Dates - 9 am to Noon</em><br>April 22nd and 23rd<br><br><b>Season Opener</b><br><em></em>April 29th, 6 am to 1 pm
       </p>
       <p class="market-page-address editable" data-cms-index="3" data-cms-source="/lyndale-market.html">
         312 East Lyndale Ave North,<br>Minneapolis, Minnesota 55405
