--- a/vendors.html
+++ b/vendors.html
@@ -7777,7 +7777,8 @@
   <div class="vendor__foot mx-1 d-flex justify-content-between">
     <div class="vendor__contact">
       
-        <a href="tel:(715) 246-7550" rel="noopener noreferrer" target="_blank"><h4><b>Call us</b></h4></a>
+        <a href="https://www.utechtshomegrownpork.com/" rel="noopener noreferrer" target="_blank"><h4><b>Visit our website</b></h4></a>
+
       
     </div>
 
