Updated 2 files via CloudCannon

--- a/ebt-guidelines.html
+++ b/ebt-guidelines.html
@@ -154,7 +154,7 @@
           Electronic Benefit Transfer (EBT) Guidelines
         </h1>
         <p class="ebt-text editable" data-cms-index="1" data-cms-source="/ebt-guidelines.html">
-          EBT Market Booth is closed for the winter<br>OPEN May - October
+          <strong>EBT will open for the season on May 6th 2023</strong><br><br>OPEN May 6th- October 31st<br>8 am to 1 pm
         </p>
         <h2 class="ebt-text editable" data-cms-index="2" data-cms-source="/ebt-guidelines.html">
           Here is how it works!
