Updated 2 files via CloudCannon

--- a/lyndale-market.html
+++ b/lyndale-market.html
@@ -157,7 +157,7 @@
         
       </h5>
       <p class="market-page-hours editable" data-cms-index="2" data-cms-source="/lyndale-market.html">
-        <strong>EBT is closed for the winter.&nbsp;</strong><br>---------------------------<br><strong>Winter Farmers Market</strong><br><em>Open On Select Dates - 9 am to Noon</em><br>April 22nd and 23rd<br><br><b>Season Opener</b><br><em></em>April 29th, 6 am to 1 pm
+        <strong>Now open daily 6 am to 1 pm May- October<br><br>-----------------------------------------------<br>EBT is open beginning May 6th 2023!&nbsp;</strong><br>Thursday-Sunday&nbsp;<br>8 am to 1 pm<br>
       </p>
       <p class="market-page-address editable" data-cms-index="3" data-cms-source="/lyndale-market.html">
         312 East Lyndale Ave North,<br>Minneapolis, Minnesota 55405
