Updated 2 files via CloudCannon

--- a/index.html
+++ b/index.html
@@ -187,14 +187,11 @@
   <div class="market-info-wrapper">
     <div class="col-12 col-lg-12 home-market-info editable" data-cms-index="0" data-cms-source="/_includes/home-market-info.html" id="home-market-one">
       <h5>Minneapolis Farmers Market</h5>
-      <p>We're sorry, no dogs are allowed!</p>
-      <p>EBT is closed for the winter.&nbsp;</p>
+      <p>Open daily 6 am to 1 pm now through October 31st!</p>
       <p>----------------------------</p>
-      <p><strong>Winter Farmers Market</strong></p>
-      <p><em>Open On Select Dates - 9 am to Noon</em></p>
-      <p>April 1st</p>
-      <p>April 15th</p>
-      <p>April 22nd and 23rd</p>
+      <p>We're sorry, no dogs are allowed!</p>
+      <p>EBT will be open May 6th - October 31st&nbsp;</p>
+      <p>Thursday- Sunday 8:00 am - 1:00 pm&nbsp;</p>
       <p class="market-address">312 East Lyndale Ave North,<br>Minneapolis, Minnesota 55405</p>
       <p><a class="btn btn-lg theme-button" href="/lyndale-market" role="button">Learn More</a></p>
     </div>
