Updated 5 files via CloudCannon

--- a/about.html
+++ b/about.html
@@ -153,7 +153,7 @@
       <h2 class="editable" data-cms-index="0" data-cms-source="/_includes/about-hero.html" id="our-story-h2-d">
         Our Story
       </h2>
-      <img alt="friendly face" class="img-fluid about-img-1-img editable" data-cms-index="1" data-cms-original-src="/uploads/img-3588.jpg" data-cms-original-srcset="/uploads/img-3588.jpg 366w, /uploads/img-3588@2x.jpg 732w" data-cms-source="/_includes/about-hero.html" src="/uploads/img-3588.jpg?_cchid=5c283841e06431b2bd2407883b0cdba2" srcset="/uploads/img-3588.jpg?_cchid=5c283841e06431b2bd2407883b0cdba2 366w, /uploads/img-3588@2x.jpg?_cchid=70c74ccf864b35546d79f03ace137a71 732w" width="366">
+      <img alt="friendly face" class="img-fluid about-img-1-img editable" data-cms-index="1" data-cms-original-src="/uploads/image000009-2.jpg" data-cms-source="/_includes/about-hero.html" src="/uploads/image000009-2.jpg?_cchid=be6a74939cfb4667e9efbe695bf643d2" width="366">
       <div class="about-hero-text">
         <h2 class="editable" data-cms-index="2" data-cms-source="/_includes/about-hero.html">
           We're on a mission to bring goodness to our community
@@ -167,7 +167,7 @@
       </div>
     </div>
     <div class="col-md-4 about-img-2">
-      <img alt="friendly face" class="img-fluid editable" data-cms-index="5" data-cms-original-src="/assets/img/AboutImage2.png" data-cms-source="/_includes/about-hero.html" src="/assets/img/AboutImage2.png?_cchid=5b4a2e8759682f9eb5a3be699c64e04b">
+      <img alt="friendly face" class="img-fluid editable" data-cms-index="5" data-cms-original-src="/uploads/352227405-657053069800674-2756205904775018492-n.jpg" data-cms-original-srcset="/uploads/352227405-657053069800674-2756205904775018492-n.jpg 367w, /uploads/352227405-657053069800674-2756205904775018492-n@2x.jpg 734w" data-cms-source="/_includes/about-hero.html" src="/uploads/352227405-657053069800674-2756205904775018492-n.jpg?_cchid=5a2d60ad16ef350c0796caf38cf3c1ab" srcset="/uploads/352227405-657053069800674-2756205904775018492-n.jpg?_cchid=5a2d60ad16ef350c0796caf38cf3c1ab 367w, /uploads/352227405-657053069800674-2756205904775018492-n@2x.jpg?_cchid=4f446f20088b2112470cf97263efeaf5 734w" width="367">
     </div>
     <div class="col-md-4 about-img-3">
       <h2 class="editable" data-cms-index="6" data-cms-source="/_includes/about-hero.html" id="our-story-h2-m">
