Updated 2 files via CloudCannon

--- a/index.html
+++ b/index.html
@@ -304,7 +304,7 @@
     
       <div class="d-inline-block">
         <a class="item" href="https://www.instagram.com/p/Cr6bYEdO8v6/" target="_blank">
-          <img alt="Many Flowers" class="img-large ig-img img-fluid" data-cms-original-src="assets/img/instagram/ig10.jpeg" src="/assets/img/instagram/ig10.jpeg?_cchid=f61b343223a255e0f7873a9f8ae09a01">
+          <img alt="Many Flowers" class="img-large ig-img img-fluid" src="">
         </a>
       </div>
     
