Updated 2 files via CloudCannon

--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
       <p>----------------------------</p>
       <p>We're sorry, no dogs are allowed!</p>
       <p>EBT will be open May 6th - October 31st&nbsp;</p>
-      <p>Thursday- Sunday 8:00 am - 1:00 pm&nbsp;</p>
+      <p>Saturday and Sunday 8:00 am - 1:00 pm&nbsp;</p>
       <p class="market-address">312 East Lyndale Ave North,<br>Minneapolis, Minnesota 55405</p>
       <p><a class="btn btn-lg theme-button" href="/lyndale-market" role="button">Learn More</a></p>
     </div>
