Updated 4 files via CloudCannon

--- a/contact.html
+++ b/contact.html
@@ -150,7 +150,7 @@
   <h1 class="editable" data-cms-index="0" data-cms-source="/contact.html">
     Get in touch with us
   </h1>
-  <img class="img-fluid editable" data-cms-index="1" data-cms-original-src="/assets/img/ContactHeroImage.png" data-cms-source="/contact.html" src="/assets/img/ContactHeroImage.png?_cchid=b6ee2f6877b4f26717ad109856f150b4">
+  <img class="img-fluid editable" data-cms-index="1" data-cms-original-src="/uploads/pxl-20230507-112655005-portrait.jpg" data-cms-original-srcset="/uploads/pxl-20230507-112655005-portrait.jpg 1440w, /uploads/pxl-20230507-112655005-portrait@2x.jpg 2880w" data-cms-source="/contact.html" src="/uploads/pxl-20230507-112655005-portrait.jpg?_cchid=f307dce0c0aefbf25be9b48196b30241" srcset="/uploads/pxl-20230507-112655005-portrait.jpg?_cchid=f307dce0c0aefbf25be9b48196b30241 1440w, /uploads/pxl-20230507-112655005-portrait@2x.jpg?_cchid=a68a627693a5ce18e2a87a53dd20adfb 2880w" width="1440">
   <div class="contact-content">
     <div class="col-10 col-sm-8 col-lg-6 contact-text">
   <h3 class="editable" data-cms-index="0" data-cms-source="/_includes/contact-content.html">
