Updated 3 files via CloudCannon

--- a/vendors.html
+++ b/vendors.html
@@ -162,7 +162,7 @@
       </div>
     </div>
     <div class="col-12 col-lg-6 hero-image">
-      <img class="img-fluid editable float-right" data-cms-index="3" data-cms-original-src="/assets/img/VendorHeroImage.png" data-cms-source="/vendors.html" src="/assets/img/VendorHeroImage.png?_cchid=203367e85a40ab0a0439a30218793206">
+      <img class="img-fluid editable float-right" data-cms-index="3" data-cms-original-src="/uploads/coffee.jpg" data-cms-source="/vendors.html" src="/uploads/coffee.jpg?_cchid=ba6797ec129ddce991af57165555c37b" width="721">
     </div>
   </div>
   <div class="row">
