Updated 3 files via CloudCannon

--- a/ebt-guidelines.html
+++ b/ebt-guidelines.html
@@ -215,9 +215,7 @@
       </div>
       <div class="editable" data-cms-index="8" data-cms-source="/ebt-guidelines.html">
         <h2 class="ebt-text mb-3">MPLS Farmers Market Food Access Program is sponsored by:</h2>
-        <a href="https://www.uhccommunityplan.com/" target="_blank">
-          <img alt="United Health Care logo" data-cms-original-src="/assets/img/uhc_logo.svg" src="/assets/img/uhc_logo.svg?_cchid=605182332ea17583e5adb8b7605847cc" style="width: 200px;">
-        </a>
+        <p><a href="https://www.uhccommunityplan.com/" target="_blank"><img alt="United Health Care logo" data-cms-original-src="/assets/img/uhc_logo.svg" src="/assets/img/uhc_logo.svg?_cchid=605182332ea17583e5adb8b7605847cc" style="width: 200px;"> </a></p>
       </div>
     </div>
   </div>
