Updated 2 files via CloudCannon

--- a/index.html
+++ b/index.html
@@ -189,6 +189,16 @@
       <h5>Minneapolis Farmers Market</h5>
       <p>Open daily 6 am to 1 pm now through October 31st!</p>
       <p>----------------------------</p>
+      <p><strong>Winter Market Hours&nbsp;</strong></p>
+      <p>Select dates 9 am to Noon</p>
+      <p>------------------------------</p>
+      <p><strong>November: </strong></p>
+      <p>Saturday's and Sunday's&nbsp;</p>
+      <p>(4th, 5th, 11th, 12th, 18th, 19th, 25th, 26th)</p>
+      <p><strong>December:</strong></p>
+      <p>Saturday's and Sunday's</p>
+      <p>(2nd, 3rd, 9th, 10th, 16th, 17th, 23rd, 30th)</p>
+      <p>&nbsp;</p>
       <p>We're sorry, no dogs are allowed!</p>
       <p>EBT will be open May 6th - October 31st&nbsp;</p>
       <p>Saturday and Sunday 8:00 am - 1:00 pm&nbsp;</p>
