Updated 2 files via CloudCannon

--- a/index.html
+++ b/index.html
@@ -198,6 +198,7 @@
       <p><strong>December:</strong></p>
       <p>Saturday's and Sunday's</p>
       <p>(2nd, 3rd, 9th, 10th, 16th, 17th, 23rd, 30th)</p>
+      <p><em>Stay tuned for more dates!</em></p>
       <p>&nbsp;</p>
       <p>We're sorry, no dogs are allowed!</p>
       <p>EBT will be open May 6th - October 31st&nbsp;</p>
