Updated 3 files via CloudCannon

--- a/lyndale-market.html
+++ b/lyndale-market.html
@@ -157,7 +157,7 @@
         
       </h5>
       <p class="market-page-hours editable" data-cms-index="2" data-cms-source="/lyndale-market.html">
-        <strong>Now open daily 6 am to 1 pm May- October<br><br>-----------------------------------------------<br>EBT is open beginning May 6th 2023!&nbsp;</strong><br>Saturday and Sunday&nbsp;<br>8 am to 1 pm<br><br><strong>Winter Market Hours&nbsp;</strong><br>Select dates 9 am to Noon<br>------------------------------<br><strong>November: </strong><br>Saturday's and Sunday's&nbsp;<br>(4th, 5th, 11th, 12th, 18th, 19th, 25th, 26th)<br><strong>December:</strong><br>Saturday's and Sunday's<br>(2nd, 3rd, 9th, 10th, 16th, 17th, 23rd, 30th)<br><em>Stay tuned for more dates!</em>
+        <strong>Now open daily 6 am to 1 pm May- October<br><br>-----------------------------------------------<br>EBT is open beginning May 6th 2023!&nbsp;</strong><br>Saturday and Sunday&nbsp;<br>8 am to 1 pm<br><br><strong>Winter Market Hours&nbsp;</strong><br>Select dates 9 am to Noon<br>------------------------------<br><strong>November: </strong><br>Saturday's and Sunday's&nbsp;<br>(4th, 5th, 11th, 12th, 18th, 19th, 25th, 26th)<br><br><strong>December:</strong><br>Saturday's and Sunday's<br>(2nd, 3rd, 9th, 10th, 16th, 17th, 23rd, 30th)<br><em>Stay tuned for more dates!</em>
       </p>
       <p class="market-page-address editable" data-cms-index="3" data-cms-source="/lyndale-market.html">
         312 East Lyndale Ave North,<br>Minneapolis, Minnesota 55405
