Updated 3 files via CloudCannon

--- a/index.html
+++ b/index.html
@@ -198,7 +198,15 @@
       <p><strong>December:</strong></p>
       <p>Saturday's and Sunday's</p>
       <p>(2nd, 3rd, 9th, 10th, 16th, 17th, 23rd, 30th)</p>
-      <p><em>Stay tuned for more dates!</em></p>
+      <p><em><strong></strong></em><strong>January:</strong></p>
+      <p>Saturday the 6th and 20th</p>
+      <p><strong>February:</strong></p>
+      <p>Saturday the 3rd and the 17th</p>
+      <p><strong>March:</strong></p>
+      <p>Saturday the 2nd and the 16th</p>
+      <p><strong>April:</strong></p>
+      <p>Saturday the 6th, 13th, 20th, and 27th</p>
+      <p>Sunday the 28th</p>
       <p>&nbsp;</p>
       <p>We're sorry, no dogs are allowed!</p>
       <p>EBT will be open May 6th - October 31st&nbsp;</p>
