Updated 2 files via CloudCannon

--- a/vendors.html
+++ b/vendors.html
@@ -236,8 +236,8 @@
               <div class="d-flex flex-column vendor-card border">
                   <div class="vendor-card__top">
   <div class="vendor__head mx-1">
-    <h2><b>Anthony Simmons</b></h2>
-    <h3>Anthony</h3>
+    <h2><b>Just Paulas</b></h2>
+    <h3>Anthony Simmons</h3>
   </div>
 </div>
 
