--- a/vendors.html
+++ b/vendors.html
@@ -367,6 +367,9 @@
   <div class="vendor__foot mx-1 d-flex justify-content-between">
     <div class="vendor__contact">
       
+        <a href="mailto:artandsoul50720@gmail.com" rel="noopener noreferrer" target="_blank"><h4><b>Email us</b></h4></a>
+
+      
     </div>
 
     <div class="vendor__icons float-right">
