Updated 2 files via CloudCannon

--- a/vendors.html
+++ b/vendors.html
@@ -236,7 +236,7 @@
               <div class="d-flex flex-column vendor-card border">
                   <div class="vendor-card__top">
   <div class="vendor__head mx-1">
-    <h2><b>Just Paulas</b></h2>
+    <h2><b>Just Paula's </b></h2>
     <h3>Anthony Simmons</h3>
   </div>
 </div>
